--- a/titanic/Titanic.ipynb
+++ b/titanic/Titanic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "4       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "max      3.000000   80.000000    5.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,11 +840,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = sc.transform(X_train)"
+    "X_train = sc.transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
    ]
   },
   {
