--- a/titanic/Titanic.ipynb
+++ b/titanic/Titanic.ipynb
@@ -1453,28 +1453,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = SVC(C = 2, kernel='rbf', degree=3)"
+    "clf = SVC(C = 1.7, kernel='rbf', degree=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=2, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "SVC(C=1.7, cache_size=200, class_weight=None, coef0=0.0,\n",
        "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
        "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
        "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1494,40 +1494,40 @@
      "text": [
       "Train Result : \n",
       "\n",
-      "Accuracy Score 0.8453\n",
+      "Accuracy Score 0.8418\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.82      0.95      0.88       344\n",
-      "          1       0.91      0.68      0.78       225\n",
+      "          0       0.81      0.96      0.88       344\n",
+      "          1       0.91      0.67      0.77       225\n",
       "\n",
-      "avg / total       0.85      0.85      0.84       569\n",
+      "avg / total       0.85      0.84      0.84       569\n",
       " \n",
       "\n",
       "Confusion Metrics : \n",
-      " [[328  16]\n",
-      " [ 72 153]] \n",
+      " [[329  15]\n",
+      " [ 75 150]] \n",
       "\n",
-      "Average Accuracy : 0.8121\n",
+      "Average Accuracy : 0.8156\n",
       "\n",
-      "Accuracy SD : 0.0395\n",
+      "Accuracy SD : 0.0352\n",
       "\n",
       "Test Result : \n",
       "\n",
-      "Accuracy Score 0.8252\n",
+      "Accuracy Score 0.8322\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.80      0.93      0.86        80\n",
-      "          1       0.88      0.70      0.78        63\n",
+      "          0       0.80      0.94      0.86        80\n",
+      "          1       0.90      0.70      0.79        63\n",
       "\n",
-      "avg / total       0.83      0.83      0.82       143\n",
+      "avg / total       0.84      0.83      0.83       143\n",
       "\n",
       "\n",
       "Confusion Metrics : \n",
-      " [[74  6]\n",
+      " [[75  5]\n",
       " [19 44]] \n",
       "\n"
      ]
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1614,6 +1614,27 @@
       "Confusion Metrics : \n",
       " [[328  16]\n",
       " [ 72 153]] \n",
+      "\n",
+      "Average Accuracy : 0.8173\n",
+      "\n",
+      "Accuracy SD : 0.0398\n",
+      "\n",
+      "Test Result : \n",
+      "\n",
+      "Accuracy Score 0.8322\n",
+      "\n",
+      "Classification Report : \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.80      0.94      0.86        80\n",
+      "          1       0.90      0.70      0.79        63\n",
+      "\n",
+      "avg / total       0.84      0.83      0.83       143\n",
+      "\n",
+      "\n",
+      "Confusion Metrics : \n",
+      " [[75  5]\n",
+      " [19 44]] \n",
       "\n"
      ]
     }
