--- a/titanic/SVM optimize.ipynb
+++ b/titanic/SVM optimize.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jatin/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/jatin/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/jatin/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -14,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +156,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,37 +228,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = SVC(C = 5, degree=2, cache_size=100)"
+    "clf = RandomForestClassifier(criterion='entropy', n_estimators=200, max_depth=5, min_samples_split=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SVC(C=5, cache_size=100, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=2, gamma='auto', kernel='rbf',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "            max_depth=5, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=20,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=200, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -265,41 +282,41 @@
      "text": [
       "Train Result : \n",
       "\n",
-      "Accuracy Score 0.8418\n",
+      "Accuracy Score 0.8541\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.84      0.92      0.88       344\n",
-      "          1       0.85      0.72      0.78       225\n",
+      "          0       0.82      0.97      0.89       344\n",
+      "          1       0.93      0.68      0.79       225\n",
       "\n",
-      "avg / total       0.84      0.84      0.84       569\n",
+      "avg / total       0.86      0.85      0.85       569\n",
       " \n",
       "\n",
       "Confusion Metrics : \n",
-      " [[316  28]\n",
-      " [ 62 163]] \n",
+      " [[332  12]\n",
+      " [ 71 154]] \n",
       "\n",
-      "Average Accuracy : 0.8138\n",
+      "Average Accuracy : 0.8068\n",
       "\n",
-      "Accuracy SD : 0.0531\n",
+      "Accuracy SD : 0.0331\n",
       "\n",
       "Test Result : \n",
       "\n",
-      "Accuracy Score 0.8112\n",
+      "Accuracy Score 0.8042\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.80      0.89      0.84        80\n",
-      "          1       0.83      0.71      0.77        63\n",
+      "          0       0.77      0.93      0.84        80\n",
+      "          1       0.87      0.65      0.75        63\n",
       "\n",
-      "avg / total       0.81      0.81      0.81       143\n",
+      "avg / total       0.82      0.80      0.80       143\n",
       "\n",
       "\n",
       "Confusion Metrics : \n",
-      " [[71  9]\n",
-      " [18 45]] \n",
+      " [[74  6]\n",
+      " [22 41]] \n",
       "\n"
      ]
     }
@@ -331,10 +348,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {'C': [0.001, 0.01, 0.1, 1, 2, 3],\n",
-    "          'cache_size': [100, 200, 400, 500],\n",
-    "          'kernel': ['rbf', 'linear', 'poly'],\n",
-    "          'degree': range(1, 5)}"
+    "params = {'criterion': ['entropy', 'gini'],\n",
+    "          'n_estimators': [100, 200, 300, 400],\n",
+    "          'min_samples_split': [10, 20, 30, 40,50],\n",
+    "          'max_depth': [3, 4, 5, 6, 7, 8]}"
    ]
   },
   {
@@ -355,12 +372,15 @@
      "data": {
       "text/plain": [
        "GridSearchCV(cv=None, error_score='raise',\n",
-       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False),\n",
+       "       estimator=RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
+       "            max_depth=5, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=20,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=200, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False),\n",
        "       fit_params=None, iid=True, n_jobs=-1,\n",
-       "       param_grid={'C': [0.001, 0.01, 0.1, 1, 2, 3], 'cache_size': [100, 200, 400, 500], 'kernel': ['rbf', 'linear', 'poly'], 'degree': range(1, 5)},\n",
+       "       param_grid={'criterion': ['entropy', 'gini'], 'n_estimators': [100, 200, 300, 400], 'min_samples_split': [10, 20, 30, 40, 50], 'max_depth': [3, 4, 5, 6, 7, 8]},\n",
        "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
        "       scoring=None, verbose=0)"
       ]
@@ -385,41 +405,41 @@
      "text": [
       "Train Result : \n",
       "\n",
-      "Accuracy Score 0.8418\n",
+      "Accuracy Score 0.8981\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.82      0.94      0.88       344\n",
-      "          1       0.88      0.69      0.78       225\n",
+      "          0       0.88      0.96      0.92       344\n",
+      "          1       0.93      0.80      0.86       225\n",
       "\n",
-      "avg / total       0.85      0.84      0.84       569\n",
+      "avg / total       0.90      0.90      0.90       569\n",
       " \n",
       "\n",
       "Confusion Metrics : \n",
-      " [[323  21]\n",
-      " [ 69 156]] \n",
+      " [[331  13]\n",
+      " [ 45 180]] \n",
       "\n",
-      "Average Accuracy : 0.7996\n",
+      "Average Accuracy : 0.8103\n",
       "\n",
-      "Accuracy SD : 0.0438\n",
+      "Accuracy SD : 0.0413\n",
       "\n",
       "Test Result : \n",
       "\n",
-      "Accuracy Score 0.8252\n",
+      "Accuracy Score 0.7832\n",
       "\n",
       "Classification Report : \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.80      0.91      0.85        80\n",
-      "          1       0.87      0.71      0.78        63\n",
+      "          0       0.76      0.89      0.82        80\n",
+      "          1       0.82      0.65      0.73        63\n",
       "\n",
-      "avg / total       0.83      0.83      0.82       143\n",
+      "avg / total       0.79      0.78      0.78       143\n",
       "\n",
       "\n",
       "Confusion Metrics : \n",
-      " [[73  7]\n",
-      " [18 45]] \n",
+      " [[71  9]\n",
+      " [22 41]] \n",
       "\n"
      ]
     }
@@ -437,10 +457,13 @@
     {
      "data": {
       "text/plain": [
-       "SVC(C=1, cache_size=100, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=1, gamma='auto', kernel='rbf',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=7, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=10,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=300, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
       ]
      },
      "execution_count": 32,
